correcting to many connection issue