@@ -2,13 +2,13 @@ package service;
 import helper.DBHelper;
 import siege.Siege;
 import java.io.File;
+import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.rmi.Naming;
 import java.rmi.NotBoundException;
-import java.rmi.registry.LocateRegistry;
 import java.rmi.server.UnicastRemoteObject;
 import java.rmi.RemoteException;
 import java.sql.*;
@@ -18,10 +18,8 @@ import java.util.List;
 public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     private static final String pathFacture = System.getProperty("user.home") + "\\Desktop\\factures\\";
-
     private static final int rmiPort = 1093;
     private static final String rmiSiegeUrl = "rmi://localhost:" + rmiPort + "/SG";
-
     private DBHelper dbHelper = new DBHelper();
 
     private static final Siege stub;
@@ -44,20 +42,13 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
     }
 
     @Override
-    public ResultSet sqlQuery(String query) throws RemoteException {
-        return dbHelper.executeQuery(query);
-    }
-
-    @Override
-    public void sqlUpdate(String query) throws RemoteException {
-        dbHelper.executeUpdateQuery(query);
-    }
-
-    @Override
     public List<String> getAllProductsRef() throws RemoteException {
         List<String> refs = new ArrayList<>();
-        try {
-            ResultSet resultSet = sqlQuery("SELECT reference FROM article");
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT reference FROM article"
+                )
+        ) {
             if (resultSet == null) {
                 return null;
             }
@@ -73,8 +64,13 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public String getFamillyOfProduct(int ref) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT nom FROM famille, article WHERE famille.id_famille = article.id_famille AND reference = " + ref);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT nom FROM famille, article " +
+                        "WHERE famille.id_famille = article.id_famille " +
+                        "AND reference = " + ref
+                )
+        ) {
             resultSet.next();
             return resultSet.getString("nom");
         } catch (Exception e) {
@@ -86,8 +82,11 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
     @Override
     public List<List<String>> getAllFamily() throws RemoteException {
         List<List<String>> families = new ArrayList<>();
-        try {
-            ResultSet resultSet = sqlQuery("SELECT id_famille, nom FROM famille");
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT id_famille, nom FROM famille"
+                )
+        ) {
             if (resultSet == null) {
                 return null;
             }
@@ -97,12 +96,9 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
                 family.add(id_famille);
                 family.add(resultSet.getString("nom"));
                 List<String> productsByFamily = getProductsByFamily(Integer.parseInt(id_famille));
-                System.out.println("Products by family :" + productsByFamily);
                 family.add(String.valueOf(productsByFamily));
                 families.add(family);
             }
-            //check
-            System.out.println("Families :" + families);
             return families;
         } catch (Exception e) {
             e.printStackTrace();
@@ -112,8 +108,13 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public int getStockOfProduct(int ref) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT quantite FROM article, stock WHERE article.id_stock = stock.id_stock AND article.reference = " + ref);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT quantite FROM article, stock " +
+                        "WHERE article.id_stock = stock.id_stock " +
+                        "AND article.reference = " + ref
+                )
+        ) {
             resultSet.next();
             return resultSet.getInt("quantite");
         } catch (Exception e) {
@@ -124,50 +125,44 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public void addProduct(int ref, int quantity) throws RemoteException {
-        try {
-            int stock = getStockOfProduct(ref);
-            if (stock >= 0) {
-                sqlUpdate("UPDATE stock SET quantite = " + (stock + quantity) + " WHERE id_stock = (SELECT id_stock FROM article WHERE reference = " + ref + ")");
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
+        int stock = getStockOfProduct(ref);
+        if (stock >= 0) {
+            dbHelper.executeUpdateQuery(
+                    "UPDATE stock SET quantite = " + (stock + quantity) +
+                    "WHERE id_stock = (" +
+                            "SELECT id_stock " +
+                            "FROM article " +
+                            "WHERE reference = " + ref +
+                    ")"
+            );
         }
     }
 
     @Override
     public void addMassProduct(List<List<Integer>> Ref_Quantity) throws RemoteException {
-        try {
-            for (List<Integer> ref_quantity : Ref_Quantity) {
-                addProduct(ref_quantity.get(0), ref_quantity.get(1));
-            }
-        } catch (RemoteException ex) {
-            throw new RuntimeException(ex);
+        for (List<Integer> ref_quantity : Ref_Quantity) {
+            addProduct(ref_quantity.get(0), ref_quantity.get(1));
         }
     }
 
     @Override
     public List<String> getProductInfo(int ref) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT a.reference, a.prix, f.nom, s.quantite " +
-                    "FROM article a, famille f, stock s " +
-                    "WHERE a.id_famille = f.id_famille " +
-                    "AND a.id_stock = s.id_stock " +
-                    "AND reference = " + ref);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT a.reference, a.prix, f.nom, s.quantite " +
+                        "FROM article a, famille f, stock s " +
+                        "WHERE a.id_famille = f.id_famille " +
+                        "AND a.id_stock = s.id_stock " +
+                        "AND reference = " + ref
+                )
+        ) {
             resultSet.next();
-            if (resultSet == null) {
-                return null;
-            }
-            try {
-                List<String> productInfo = new ArrayList<>();
-                productInfo.add(resultSet.getString("reference"));
-                productInfo.add(resultSet.getString("prix"));
-                productInfo.add(resultSet.getString("nom"));
-                productInfo.add(resultSet.getString("quantite"));
-                return productInfo;
-            } catch (Exception e) {
-                e.printStackTrace();
-                return null;
-            }
+            List<String> productInfo = new ArrayList<>();
+            productInfo.add(resultSet.getString("reference"));
+            productInfo.add(resultSet.getString("prix"));
+            productInfo.add(resultSet.getString("nom"));
+            productInfo.add(resultSet.getString("quantite"));
+            return productInfo;
         } catch (Exception e) {
             e.printStackTrace();
             return null;
@@ -176,43 +171,36 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public List<String> getProductsInfo() throws RemoteException {
-        try {
-            List<String> refs = getAllProductsRef();
-            List<String> productsInfo = new ArrayList<>();
-            if (refs == null) {
-                return null;
-            }
-            System.out.println(" Ref 0 :" + refs.get(0));
+        List<String> refs = getAllProductsRef();
+        List<String> productsInfo = new ArrayList<>();
+        if (refs == null) {
+            return null;
+        } else {
             for (String ref : refs) {
-                System.out.println(" Ref :" + ref);
                 List<String> productInfo = getProductInfo(Integer.parseInt(ref));
-                System.out.println(" Product Info :" + productInfo);
                 productsInfo.add(String.valueOf(productInfo));
             }
-            System.out.println("Products Info :" + productsInfo);
             return productsInfo;
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
         }
     }
 
     @Override
     public List<String> getProductsByFamily(int id_famille) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT reference, prix, nom, s.quantite " +
-                    "FROM article a " +
-                    "JOIN famille f ON a.id_famille = f.id_famille " +
-                    "JOIN stock s ON a.id_stock = s.id_stock " +
-                    "WHERE f.id_famille = " + id_famille + " " +
-                    "AND s.quantite > 0"); // only products with stock > 0
-
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT reference, prix, nom, s.quantite " +
+                        "FROM article a " +
+                        "JOIN famille f ON a.id_famille = f.id_famille " +
+                        "JOIN stock s ON a.id_stock = s.id_stock " +
+                        "WHERE f.id_famille = " + id_famille + " " +
+                        "AND s.quantite > 0"
+                )
+        ) {
             List<String> productsByFamily = new ArrayList<>();
             while (resultSet.next()) {
                 List<String> productInfo = new ArrayList<>();
                 productInfo.add(resultSet.getString("reference"));
                 productInfo.add(resultSet.getString("prix"));
-                //productInfo.add(resultSet.getString("nom"));
                 productInfo.add(resultSet.getString("quantite"));
                 productsByFamily.add(String.valueOf(productInfo));
             }
@@ -225,14 +213,9 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public void makeDirectory(String path) throws RemoteException {
-        try {
-            File file = new File(path);
-            if (!file.exists()) {
-                file.mkdirs();
-            }
-            System.out.println("Directory setup at : " + path);
-        } catch (Exception e) {
-            e.printStackTrace();
+        File file = new File(path);
+        if (!file.exists()) {
+            file.mkdirs();
         }
     }
 
@@ -240,18 +223,24 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
     public int createFacture(int id_caisse) throws RemoteException {
         int id_new_facture = -1;
         String path = "";
-        try {
-            System.out.println("here 1");
-            //DATETIME SQL FORMAT : 'YYYY-MM-DD HH:MM:SS'
-            sqlUpdate("INSERT INTO facture (id_caisse, date_facturation) VALUES (" + id_caisse + ", NOW())");
-            System.out.println("here 2");
-            ResultSet resultSet = sqlQuery("SELECT MAX(id_facture) FROM facture");
-            System.out.println("here 3");
+        dbHelper.executeUpdateQuery(
+                "INSERT INTO facture (id_caisse, date_facturation) " +
+                "VALUES (" + id_caisse + ", NOW())"
+        );
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT MAX(id_facture) " +
+                        "FROM facture"
+                )
+        ) {
             resultSet.next();
             id_new_facture = resultSet.getInt(1);
             makeDirectory(pathFacture + id_caisse);
             path = pathFacture + id_caisse + "\\" + id_new_facture + ".txt";
-            sqlUpdate("UPDATE facture SET chemin_fichier = '" + changeSlashFormat(path) + "' WHERE id_facture = " + id_new_facture);
+            dbHelper.executeUpdateQuery(
+                    "UPDATE facture SET chemin_fichier = '" + changeSlashFormat(path) + "' " +
+                    "WHERE id_facture = " + id_new_facture
+            );
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -260,8 +249,12 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public float getPriceOfProduct(int ref) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT prix FROM article WHERE reference = " + ref);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT prix FROM article " +
+                        "WHERE reference = " + ref
+                )
+        ) {
             resultSet.next();
             return resultSet.getFloat("prix");
         } catch (Exception e) {
@@ -272,15 +265,20 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public List<String> getFacturedProducts(int id_facture) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT reference, quantite FROM facturer WHERE id_facture = " + id_facture);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT reference, quantite " +
+                        "FROM facturer " +
+                        "WHERE id_facture = " + id_facture
+                )
+        ) {
             List<String> facturedProducts = new ArrayList<>();
             while (resultSet.next()) {
                 List<String> productInfo = new ArrayList<>();
-                productInfo.add(resultSet.getString("reference")); //Ref
-                productInfo.add(resultSet.getString("quantite")); //Order quantity
-                productInfo.add(getFamillyOfProduct(resultSet.getInt("reference")));//Family
-                productInfo.add(String.valueOf(getPriceOfProduct(resultSet.getInt("reference"))));//Unit price
+                productInfo.add(resultSet.getString("reference"));
+                productInfo.add(resultSet.getString("quantite"));
+                productInfo.add(getFamillyOfProduct(resultSet.getInt("reference")));
+                productInfo.add(String.valueOf(getPriceOfProduct(resultSet.getInt("reference"))));
                 facturedProducts.add(String.valueOf(productInfo));
             }
             facturedProducts.add(String.valueOf(id_facture));
@@ -291,52 +289,53 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
         }
     }
 
-
     @Override
     public List<String> setNewFacture(List<List<Integer>> Ref_Quantity, int id_caisse) throws RemoteException {
-        try {
-            int id_facture = createFacture(id_caisse);
-            if (id_facture == -1) {
-                System.out.println("Error creating new facture");
-                return null;
-            }
-            for (List<Integer> ref_quantity : Ref_Quantity) {
-                int ref = ref_quantity.get(0);
-                int quantity = ref_quantity.get(1);
-                sqlUpdate("INSERT INTO facturer (id_facture, reference, quantite) VALUES (" + id_facture + ", " + ref + ", " + quantity + ")");
-            }
-            return getFacturedProducts(id_facture);
-        } catch (Exception e) {
-            System.out.println("Error setting up new facture");
-            e.printStackTrace();
+        int id_facture = createFacture(id_caisse);
+        if (id_facture == -1) {
+            System.out.println("Error creating new facture");
             return null;
         }
+        for (List<Integer> ref_quantity : Ref_Quantity) {
+            int ref = ref_quantity.get(0);
+            int quantity = ref_quantity.get(1);
+            dbHelper.executeUpdateQuery(
+                    "INSERT INTO facturer (id_facture, reference, quantite) " +
+                    "VALUES (" + id_facture + ", " + ref + ", " + quantity + ")"
+            );
+        }
+        if (getFacturedProducts(id_facture) == null) {
+            System.out.println("Error getting factured products");
+            return null;
+        }
+        return getFacturedProducts(id_facture);
     }
 
     @Override
     public void editFacturedProductQuantity(int id_facture, int ref, int quantity) throws RemoteException {
-        try {
-            sqlUpdate("UPDATE facturer SET quantite = " + quantity + " WHERE id_facture = " + id_facture + " AND reference = " + ref);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        dbHelper.executeUpdateQuery(
+                "UPDATE facturer SET quantite = " + quantity + " " +
+                "WHERE id_facture = " + id_facture + " " +
+                "AND reference = " + ref
+        );
     }
 
     @Override
     public void editFacturedMassProductsQuantity(List<List<Integer>> Ref_Quantity, int id_facture) throws RemoteException {
-        try {
-            for (List<Integer> ref_quantity : Ref_Quantity) {
-                editFacturedProductQuantity(id_facture, ref_quantity.get(0), ref_quantity.get(1));
-            }
-        } catch (RemoteException ex) {
-            throw new RuntimeException(ex);
+        for (List<Integer> ref_quantity : Ref_Quantity) {
+            editFacturedProductQuantity(id_facture, ref_quantity.get(0), ref_quantity.get(1));
         }
     }
 
     @Override
     public void deleteFacturedProduct(int id_facture, int ref) throws RemoteException {
-        try {
-            sqlQuery("DELETE FROM facturer WHERE id_facture = " + id_facture + " AND reference = " + ref);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "DELETE FROM facturer " +
+                        "WHERE id_facture = " + id_facture + " " +
+                        "AND reference = " + ref
+                )
+        ) {
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -344,29 +343,29 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public void deleteFacturedMassProducts(List<List<Integer>> Ref_Quantity, int id_facture) throws RemoteException {
-        try {
-            for (List<Integer> ref_quantity : Ref_Quantity) {
-                deleteFacturedProduct(id_facture, ref_quantity.get(0));
-            }
-        } catch (RemoteException ex) {
-            throw new RuntimeException(ex);
+        for (List<Integer> ref_quantity : Ref_Quantity) {
+            deleteFacturedProduct(id_facture, ref_quantity.getFirst());
         }
     }
 
     @Override
     public void setModePaiement(int id_facture, String mode) throws RemoteException {
-        try {
-            sqlUpdate("UPDATE facture SET mode_paiement = '" + mode + "' WHERE id_facture = " + id_facture);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        dbHelper.executeUpdateQuery(
+                "UPDATE facture SET mode_paiement = '" + mode +
+                "' WHERE id_facture = " + id_facture
+        );
     }
 
     @Override
     public float getTTC(int id_facture) throws RemoteException {
-        try {
-            float TTC = 0;
-            ResultSet resultSet = sqlQuery("SELECT reference, quantite FROM facturer WHERE id_facture = " + id_facture);
+        float TTC = 0;
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT reference, quantite " +
+                        "FROM facturer " +
+                        "WHERE id_facture = " + id_facture
+                )
+        ) {
             while (resultSet.next()) {
                 int ref = resultSet.getInt("reference");
                 int quantity = resultSet.getInt("quantite");
@@ -381,8 +380,13 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public String getFactureDate(int id_facture) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT date_facturation FROM facture WHERE id_facture = " + id_facture);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT date_facturation " +
+                        "FROM facture " +
+                        "WHERE id_facture = " + id_facture
+                )
+        ) {
             resultSet.next();
             return resultSet.getString("date_facturation");
         } catch (Exception e) {
@@ -393,8 +397,13 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public String getFactureCaisseInfo(int id_facture) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT facture.id_caisse, nom FROM facture, caisse WHERE facture.id_caisse = caisse.id_caisse AND id_facture = " + id_facture);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT facture.id_caisse, nom " +
+                        "FROM facture, caisse " +
+                        "WHERE facture.id_caisse = caisse.id_caisse AND id_facture = " + id_facture
+                )
+        ) {
             resultSet.next();
             return resultSet.getString("id_caisse") + " - " + resultSet.getString("nom");
         } catch (Exception e) {
@@ -405,9 +414,21 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public void cancelFacture(int id_facture) throws RemoteException {
-        try {
-            sqlQuery("DELETE FROM facturer WHERE id_facture = " + id_facture);
-            sqlQuery("DELETE FROM facture WHERE id_facture = " + id_facture);
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "DELETE FROM facturer " +
+                        "WHERE id_facture = " + id_facture
+                )
+        ) {
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "DELETE FROM facture " +
+                        "WHERE id_facture = " + id_facture
+                )
+        ) {
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -416,75 +437,80 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public void payFacture(int id_facture, Boolean isCard) throws RemoteException {
-        try {
-            String mode = "";
-            if (isCard) {
-                setModePaiement(id_facture, "Carte Bancaire");
-                mode = "Par Carte Bancaire";
-            } else {
-                setModePaiement(id_facture, "Espèces");
-                mode = "En Espèces";
-            }
-            sqlUpdate("UPDATE facture SET prix_totale_TTC = " + getTTC(id_facture) + " WHERE id_facture = " + id_facture);
-            //generate flat file
-            List<String> facturedProducts = getFacturedProducts(id_facture);
-            String Date = getFactureDate(id_facture);
-            String TTC = String.valueOf(getTTC(id_facture));
-            String CaisseInfo = getFactureCaisseInfo(id_facture);
-            String Caisse_id = CaisseInfo.split(" - ")[0];
-            System.out.println("Caisse id :" + Caisse_id);
-            String path = pathFacture + Caisse_id + "\\" + id_facture + ".txt";
-            System.out.println("Path :" + path);
-            //Write file  .txt :
+        String mode = "";
+        if (isCard) {
+            setModePaiement(id_facture, "Carte Bancaire");
+            mode = "Par Carte Bancaire";
+        } else {
+            setModePaiement(id_facture, "Espèces");
+            mode = "En Espèces";
+        }
+        dbHelper.executeUpdateQuery(
+                "UPDATE facture SET prix_totale_TTC = " + getTTC(id_facture) +
+                " WHERE id_facture = " + id_facture
+        );
+        List<String> facturedProducts = getFacturedProducts(id_facture);
+        String Date = getFactureDate(id_facture);
+        String TTC = String.valueOf(getTTC(id_facture));
+        String CaisseInfo = getFactureCaisseInfo(id_facture);
+        String Caisse_id = CaisseInfo.split(" - ")[0];
+        String path = pathFacture + Caisse_id + "\\" + id_facture + ".txt";
+        File file = new File(path);
+        if (!file.exists()) {
             try {
-                File file = new File(path);
-                if (!file.exists()) {
-                    file.createNewFile();
-                }
-                java.io.FileWriter fileWriter = new java.io.FileWriter(file);
-                fileWriter.write("=====================================================\n\n");
-                fileWriter.write("      Heptathlon    -    Caisse N°:" + CaisseInfo + "\n\n");
-                fileWriter.write("        Facture N°" + id_facture + "   Date : " + Date + "\n\n");
-                fileWriter.write("====================Produits=========================\n\n");
-                fileWriter.write("Ref| Catégorie | Quantité | Prix Unitaire\n\n");
-                for (String product : facturedProducts) {
-                    if (product.equals(String.valueOf(id_facture))) {
-                        continue;
-                    }
-                    System.out.println("Product :" + product);
-                    String productRef = product.split(",")[0].split("\\[")[1];
-                    System.out.println("Product ref :" + productRef);
-                    String productQuantity = product.split(",")[1].substring(1);
-                    System.out.println("Product qty :" + productQuantity);
-                    String productFamily = product.split(",")[2].substring(1);
-                    System.out.println("Product fam :" + productFamily);
-                    String productPrice = product.split(",")[3].substring(1, product.split(",")[3].length() - 1) + " EUR";
-                    System.out.println("Product rest :" + productPrice);
-                    String productFormatted = productRef + " | " + productFamily + " |    " + productQuantity + "    | " + productPrice;
-                    fileWriter.write(productFormatted + "\n");
-                    System.out.println("Product Formatted :" + productFormatted);
-                    //Reduce stock
-                    int ref = Integer.parseInt(productRef);
-                    int quantity = Integer.parseInt(productQuantity);
-                    addProduct(ref, -quantity);
-                }
-                fileWriter.write("\n=====================================================\n");
-                fileWriter.write("Prix TTC : " + TTC + "EUR  -- Paiement " + mode + "\n");
-                fileWriter.write("=====================================================\n\n");
-                fileWriter.write("         Veuillez conserver votre facture\n");
-                fileWriter.close();
-            } catch (Exception e) {
-                e.printStackTrace();
+                file.createNewFile();
+            } catch (IOException e) {
+                throw new RuntimeException(e);
             }
-        } catch (Exception e) {
-            e.printStackTrace();
+        }
+        java.io.FileWriter fileWriter = null;
+        try {
+            fileWriter = new java.io.FileWriter(file);
+            fileWriter.write("=====================================================\n\n");
+            fileWriter.write("      Heptathlon    -    Caisse N°:" + CaisseInfo + "\n\n");
+            fileWriter.write("        Facture N°" + id_facture + "   Date : " + Date + "\n\n");
+            fileWriter.write("====================Produits=========================\n\n");
+            fileWriter.write("Ref| Catégorie | Quantité | Prix Unitaire\n\n");
+            for (String product : facturedProducts) {
+                if (product.equals(String.valueOf(id_facture))) {
+                    continue;
+                }
+                String productRef = product.split(",")[0].split("\\[")[1];
+                String productQuantity = product.split(",")[1].substring(1);
+                String productFamily = product.split(",")[2].substring(1);
+                String productPrice = product.split(",")[3]
+                        .substring(1, product.split(",")[3].length() - 1) + " EUR";
+                String productFormatted =
+                        productRef + " | " +
+                        productFamily + " |    " +
+                        productQuantity + "    | " +
+                        productPrice;
+                fileWriter.write(productFormatted + "\n");
+                int ref = Integer.parseInt(productRef);
+                int quantity = Integer.parseInt(productQuantity);
+                addProduct(ref, -quantity);
+            }
+            fileWriter.write("\n=====================================================\n");
+            fileWriter.write("Prix TTC : " + TTC + "EUR  -- Paiement " + mode + "\n");
+            fileWriter.write("=====================================================\n\n");
+            fileWriter.write("         Veuillez conserver votre facture\n");
+            fileWriter.close();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
 
     @Override
     public float getCABetweenDates(String date1, String date2) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT SUM(prix_totale_TTC) FROM facture WHERE date_facturation BETWEEN '" + date1 + "' AND '" + date2 + "'");
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT SUM(prix_totale_TTC) " +
+                        "FROM facture " +
+                        "WHERE date_facturation " +
+                        "BETWEEN '" + date1 + "' " +
+                        "AND '" + date2 + "'"
+                )
+        ) {
             resultSet.next();
             if (resultSet.wasNull()) {
                 return -1;
@@ -498,8 +524,16 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public float getLocalCABetweenDates(String date1, String date2) throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT SUM(prix_totale_TTC) FROM facture WHERE date_facturation BETWEEN '" + date1 + "' AND '" + date2 + "' AND id_caisse = 1");
+        try (
+                ResultSet resultSet = dbHelper.executeQuery(
+                        "SELECT SUM(prix_totale_TTC) " +
+                        "FROM facture " +
+                        "WHERE date_facturation " +
+                        "BETWEEN '" + date1 + "' " +
+                        "AND '" + date2 + "' " +
+                        "AND id_caisse = 1"
+                )
+        ) {
             resultSet.next();
             if (resultSet.wasNull()) {
                 return -1;
@@ -523,23 +557,22 @@ public class CheckoutImpl extends UnicastRemoteObject implements Checkout {
 
     @Override
     public Boolean uploadDataToSiege() throws RemoteException {
-        try {
-            ResultSet resultSet = sqlQuery("SELECT * FROM facture");
+
+        try (ResultSet resultSet = dbHelper.executeQuery("SELECT * FROM facture")) {
+            if (resultSet == null) {
+                System.out.println("Error getting Data from Facture");
+                return false;
+            }
             while (resultSet.next()) {
-                try {
-                    String id_caisse = resultSet.getString("id_caisse");
-                    String id_facture = resultSet.getString("id_facture");
-                    String date_facture = resultSet.getString("date_facturation");
-                    Float prix_totale_TTC = resultSet.getFloat("prix_totale_TTC");
-                    String cheminFichier = returnSlashFormat(resultSet.getString("chemin_fichier"));
-                    Path path = Paths.get(cheminFichier);
-                    byte[] data = Files.readAllBytes(path);
-                    if (!stub.uploadFile(data, cheminFichier, id_caisse, id_facture, date_facture, prix_totale_TTC)) {
-                        System.out.println("Error uploading Data : [ id facture : " + id_facture + " ] to Siege");
-                        return false;
-                    }
-                } catch (Exception e) {
-                    e.printStackTrace();
+                String id_caisse = resultSet.getString("id_caisse");
+                String id_facture = resultSet.getString("id_facture");
+                String date_facture = resultSet.getString("date_facturation");
+                Float prix_totale_TTC = resultSet.getFloat("prix_totale_TTC");
+                String cheminFichier = returnSlashFormat(resultSet.getString("chemin_fichier"));
+                Path path = Paths.get(cheminFichier);
+                byte[] data = Files.readAllBytes(path);
+                if (!stub.uploadFile(data, cheminFichier, id_caisse, id_facture, date_facture, prix_totale_TTC)) {
+                    System.out.println("Error uploading Data : [ id facture : " + id_facture + " ] to Siege");
                     return false;
                 }
             }
